[CSS+VUE] Spinning and wrong width fix

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4096,3 +4096,19 @@ textarea::placeholder {
 .modal-body {
     overflow: auto;
 }
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+.spinningLoading {
+    animation-name: spin;
+    animation-duration: 2500ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; 
+}
